--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,12 +32,28 @@
     </header>
     <div class="main-content">
         <div class="row">
-            <h2 class="col-md-6">" Death is inevitable. <br /> Living a life we can be <br /> proud of is something <br /> we can
-            control " <br /> <span class="name">Claire Wineland</span></h2>
+            <h1 class="col-md-6">" Death is inevitable. <br/> Living a life we can be proud of is something we can
+            control " <br /> <span class="name">Claire Wineland</span></h1>
             <div class="col-md img-container">
-                <img class="img-fluid my-img" src="images/Untitled-removebg-preview.png" alt="" srcset="">
+                <img class="img-fluid my-img" src="images/claire 2.jpg" alt="" srcset="">
             </div>
         </div>
     </div>
+    <section class="about">
+        <h2>About</h2>
+        <p> <span class="name-bold">Claire Wineland</span> was an extraordinary individual who transformed her battle with cystic fibrosis into a beacon of hope
+        and inspiration for many. Despite being diagnosed with the chronic illness at birth, Claire maintained a remarkably
+        positive and light-hearted outlook on life. She was not only a tireless advocate for cystic fibrosis awareness but also
+        a motivational speaker and a beloved content creator on YouTube, where she shared her life’s journey with humor and
+        honesty. Her platform became a sanctuary for those seeking solace and motivation, regardless of their health status.
+        Through her nonprofit organization, Claire’s Place Foundation, she provided support and financial assistance to families
+        affected by cystic fibrosis. Claire’s infectious spirit and unwavering resilience resonated deeply, inspiring countless
+        individuals facing their own challenges. Though she passed away at the tender age of 21, Claire Wineland left behind a
+        profound legacy of courage and compassion, reminding us all to find joy in every moment and to live life fully, no
+        matter the obstacles we face.</p>
+        <div class="btn-container">
+            <a href="/" class="donate-btn btn btn-outline-success">Donate</a>
+        </div>
+    </section>
 </body>
 </html>
