--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         profound legacy of courage and compassion, reminding us all to find joy in every moment and to live life fully, no
         matter the obstacles we face.</p>
         <div class="btn-container">
-            <a href="/" class="donate-btn btn btn-outline-success">Donate</a>
+            <a href="/" class="donate-btn">Donate</a>
         </div>
     </section>
 </body>
