--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,21 +17,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/6702c2301e.js" crossorigin="anonymous"></script>
+
     <title>Claire Wineland</title>
 </head>
+
 <body>
+
     <header>
+
         <div class="container">
+
             <nav class="d-flex justify-content-center">
                 <ul>
-                    <li> <a href="/">About</a></li>
-                    <li> <a href="/">Foundation</a></li>
-                    <li> <a href="/">Youtube Chanel</a></li>
+                    <li> <a href="#about">About</a></li>
+                    <li> <a href="https://clairesplacefoundation.org/" target="_blank">Foundation</a></li>
+                    <li> <a href="https://www.youtube.com/@clairewineland" target="_blank">Youtube Chanel</a></li>
                 </ul>
             </nav>
+
         </div>
+
     </header>
+
     <div class="main-content">
+
         <div class="row">
             <h1 class="col-md-6">" Death is inevitable. <br/> Living a life we can be proud of is something we can
             control " <br /> <span class="name">Claire Wineland</span></h1>
@@ -38,22 +49,41 @@
                 <img class="img-fluid my-img" src="images/claire 2.jpg" alt="" srcset="">
             </div>
         </div>
+
     </div>
-    <section class="about">
+
+    <section class="about" id="about">
+
         <h2>About</h2>
         <p> <span class="name-bold">Claire Wineland</span> was an extraordinary individual who transformed her battle with cystic fibrosis into a beacon of hope
         and inspiration for many. Despite being diagnosed with the chronic illness at birth, Claire maintained a remarkably
         positive and light-hearted outlook on life. She was not only a tireless advocate for cystic fibrosis awareness but also
         a motivational speaker and a beloved content creator on YouTube, where she shared her life’s journey with humor and
         honesty. Her platform became a sanctuary for those seeking solace and motivation, regardless of their health status.
-        Through her nonprofit organization, Claire’s Place Foundation, she provided support and financial assistance to families
+        Through her nonprofit organization, <a class="foundation-link" href="https://clairesplacefoundation.org/" target="_blank">Claire’s Place Foundation</a>, she provided support and financial assistance to families
         affected by cystic fibrosis. Claire’s infectious spirit and unwavering resilience resonated deeply, inspiring countless
         individuals facing their own challenges. Though she passed away at the tender age of 21, Claire Wineland left behind a
         profound legacy of courage and compassion, reminding us all to find joy in every moment and to live life fully, no
         matter the obstacles we face.</p>
+
         <div class="btn-container">
             <a href="/" class="donate-btn">Donate</a>
         </div>
+
     </section>
+
+    <footer>
+
+        <a href="mailto:anastasiacherniakh@knu.ua" class="email-link d-flex justify-content-center">anastasiacherniakh@knu.ua</a>
+        
+        <div class="social-link d-flex justify-content-center">
+            <a href="https://github.com/AnastasiaCherniakh" target="_blank">
+                <i class="fa-brands fa-square-github">
+                </i>
+            </a>
+        </div>
+
+    </footer>
+
 </body>
 </html>
