made the design responsive for small and medium screens

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         matter the obstacles we face.</p>
 
         <div class="btn-container">
-            <a href="/" class="donate-btn">Donate</a>
+            <a href="https://donate.clairesplacefoundation.org/" target="_blank" class="donate-btn">Donate</a>
         </div>
 
     </section>
