--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Claire Wineland was an extraordinary individual who transformed her battle with cystic fibrosis into a beacon of hope and inspiration.">
+    <title>Claire Wineland</title>
+    <link rel="stylesheet" href="styles/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,10 +20,8 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/6702c2301e.js" crossorigin="anonymous"></script>
 
-    <title>Claire Wineland</title>
 </head>
 
 <body>
@@ -46,7 +48,7 @@
             <h1 class="col-md-6">" Death is inevitable. <br/> Living a life we can be proud of is something we can
             control " <br /> <span class="name">Claire Wineland</span></h1>
             <div class="col-md img-container">
-                <img class="img-fluid my-img" src="images/claire 2.jpg" alt="" srcset="">
+                <img class="img-fluid my-img" src="images/claire 2.jpg" alt="Portrait of Claire Wineland" srcset="">
             </div>
         </div>
 
