--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <p> <span class="name-bold">Claire Wineland</span> was an extraordinary individual who transformed her battle with cystic fibrosis into a beacon of hope
         and inspiration for many. Despite being diagnosed with the chronic illness at birth, Claire maintained a remarkably
         positive and light-hearted outlook on life. She was not only a tireless advocate for cystic fibrosis awareness but also
-        a motivational speaker and a beloved content creator on YouTube, where she shared her life’s journey with humor and
+        a motivational speaker and a beloved content creator on <a class="text-link" href="https://www.youtube.com/@clairewineland" target="_blank">Youtube</a>, where she shared her life’s journey with humor and
         honesty. Her platform became a sanctuary for those seeking solace and motivation, regardless of their health status.
-        Through her nonprofit organization, <a class="foundation-link" href="https://clairesplacefoundation.org/" target="_blank">Claire’s Place Foundation</a>, she provided support and financial assistance to families
+        Through her nonprofit organization, <a class="text-link" href="https://clairesplacefoundation.org/" target="_blank">Claire’s Place Foundation</a>, she provided support and financial assistance to families
         affected by cystic fibrosis. Claire’s infectious spirit and unwavering resilience resonated deeply, inspiring countless
         individuals facing their own challenges. Though she passed away at the tender age of 21, Claire Wineland left behind a
         profound legacy of courage and compassion, reminding us all to find joy in every moment and to live life fully, no
