updated img src

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="col-md-6">" Death is inevitable. <br/> Living a life we can be proud of is something we can
             control " <br /> <span class="name">Claire Wineland</span></h1>
             <div class="col-md img-container">
-                <img class="img-fluid my-img" src="images/claire 2.jpg" alt="Portrait of Claire Wineland" srcset="">
+                <img class="img-fluid my-img" src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/133/356/original/claire.jpg?1720964893" alt="Portrait of Claire Wineland" srcset="">
             </div>
         </div>
 
